#168 Add Java port Whitebox and Expr tests (#170)
* #168 Refactor Java port tests

Signed-off-by: vityaman <vityaman.dev@yandex.ru>

* #168 Translate tests to Java

Signed-off-by: vityaman <vityaman.dev@yandex.ru>

* #168 Translate TS CodeCompletionCore to Java

Signed-off-by: vityaman <vityaman.dev@yandex.ru>

* #168 Hide a test cases ordering caused bug

Signed-off-by: vityaman <vityaman.dev@yandex.ru>

---------

Signed-off-by: vityaman <vityaman.dev@yandex.ru>